--- a/source/_templates/breadcrumbs.html
+++ b/source/_templates/breadcrumbs.html
@@ -10,6 +10,7 @@
     <a href="https://plus.google.com/+OsuoslOrg/about"><img class='icon' src="_static/google-plus-icon.png"></a>
     <a href="http://lists.osuosl.org/mailman/listinfo/devops-bootcamp"><img class='icon' src="_static/email.png"></a>
     <a href="https://www.youtube.com/playlist?list=PLqzbgtiNz4A7mrOdSWNICSbYuJOG4j4yW"><img class='icon' src="_static/youtube-icon.png"></a>
+    <a href="https://github.com/DevOpsBootcamp/website"><img class='icon' src="_static/github-icon.png"></a>
 </li>
 </ul>
 <hr/>
